Cambios en la vista del commprobante, y detalle de ventas

--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 </form>
-<form class="form-horizontal" action="{{=URL(c="ventas", f="agregar_descuento")}}" enctype="multipart/form-data" method="POST">
+<form class="form-horizontal" action="{{=URL(c="ventas", f="confirmar")}}" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         <div class="col-md-10">
           <table class="table table-hover">
@@ -75,7 +75,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-1">
-           <input type="submit" class="btn btn-default" value="Confirmar">
+           <input type="submit" class="btn btn-default" value="Finalizar Venta">
         </div>
      </div>
 </form>
