--- a/views/ventas/vista_previa.html
+++ b/views/ventas/vista_previa.html
@@ -65,39 +65,32 @@
 </div>
 </div>
 <div class="form-group">
-<div class="row">
-<div class="col-xs-12">
-<table class="table table-bordered">
-    <thead>
-        <tr>
-            <th><h5><B> SUB-TOTAL</B></h5></th>
-            <th><h5>Impuesto IVA "(10.5%)" </h5></th>
-            <th><h5>Impuesto IVA "(21%)" </h5></th>
-            <th><h5><B>SUB TOTAL+IVA</B></h5></th>
-            <th><h5>Descuento "(10%)"</h5></th>
-            <th><h5>Descuento "(15%)" </h5></th>
-            <th><h5>Descuento "(20%)"</h5></th>
-            <th><h5><B>TOTAL</B></h5></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td class=" text-right "><B>$1800</B></td>
-            <td class=" text-right ">$189.0</td>
-            <td class=" text-right ">$0</td>
-            <td class=" text-right "><B>$1989.0</B></td>
-            <td class=" text-right ">$198.9</td>
-            <td class=" text-right ">$0</td>
-            <td class=" text-right ">$0</td>
-            <td class=" text-right "><B>$1790.1</B></td>
-        </tr>
-    </tbody>
-</table>
-</div>
-</div>
-<div class="form-group">
-<div class="col-xs-5">
-       <h2><IMG SRC="http://www.equipospro.com.ar/como_pagar/codigo_barras_pago_facil_archivos/codigo_barras.gif" WIDTH=500 HEIGHT=100 /> </h2>
-</div>
+    <div class="row">
+        <div class="col-xs-6">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th><h5><B> SUB-TOTAL</B></h5></th>
+                        <th><h5>Impuesto IVA "(10.5%)" </h5></th>
+                        <th><h5>Impuesto IVA "(21%)" </h5></th>
+                        <th><h5><B>TOTAL</B></h5></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class=" text-right "><B>$1800</B></td>
+                        <td class=" text-right ">$189.0</td>
+                        <td class=" text-right ">$0</td>
+                        <td class=" text-right "><B>$1989.0</B></td>
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+        </div>
+            <div class="col-xs-4">
+               <h2>
+                   <IMG SRC="http://www.equipospro.com.ar/como_pagar/codigo_barras_pago_facil_archivos/codigo_barras.gif" WIDTH=400 HEIGHT=100 /> 
+               </h2>
+            </div>
 </div>
 </form>
