Se corrige reportes horas, funcionando

--- a/views/sueldos/legajos2.html
+++ b/views/sueldos/legajos2.html
@@ -13,27 +13,27 @@
 <div class="form-group">
             <label for="campo_localidad" class="col-sm-2 control-label">Localidad</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_localidad" placeholder="Morón">
+                <input type="text" class="form-control" name = "localidad" id="campo_localidad" placeholder="Morón">
             </div>
             <label for="campo_email" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_email" placeholder="perez@pascal.com.ar">
+                <input type="text" class="form-control" name = "email" id="campo_email" placeholder="perez@pascal.com.ar">
             </div>
             <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_feing" placeholder="15/01/2016">
+                <input type="text" class="form-control" name = "fecha_ingreso" id="campo_feing" placeholder="15/01/2016">
             </div>
     </div>
 <div class="form-group">
             <label for="campo_tel" class="col-sm-2 control-label">Teléfono</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_tel" placeholder="56567878">
+                <input type="text" class="form-control" name = "telefono" id="campo_tel" placeholder="56567878">
             </div>
             <label for="campo_telcel" class="col-sm-2 control-label">Teléfono Celular</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_telcel" placeholder="1523239090">
+                <input type="text" class="form-control" name = "telefono_celular" id="campo_telcel" placeholder="1523239090">
             </div>
-            <label for="campo_est" class="col-sm-2 control-label">Estudia</label>
+            <label for="campo_est" class="col-sm-2 control-label" name = "estudia">Estudia</label>
             <div class="col-sm-2">
                        <select class="form-control">
                           <option>Si</option>
@@ -42,21 +42,21 @@
             </div>
    </div>
 <div class="form-group">
-            <label for="campo_ccuil" class="col-sm-2 control-label">Constancia de CUIL</label>
+            <label for="campo_ccuil" class="col-sm-2 control-label" name = "constancia_cuil">Constancia de CUIL</label>
             <div class="col-sm-1">
                        <select class="form-control">
                           <option>Si</option>
                           <option>No</option>
                        </select>
             </div>
-            <label for="campo_cdni" class="col-sm-2 control-label">Fotocopia DNI</label>
+            <label for="campo_cdni" class="col-sm-2 control-label" name = "fotocopia_dni">Fotocopia DNI</label>
             <div class="col-sm-1">
                        <select class="form-control">
                           <option>Si</option>
                           <option>No</option>
                        </select>
             </div>
-            <label for="campo_atemp" class="col-sm-2 control-label">Alta Temprana</label>
+            <label for="campo_atemp" class="col-sm-2 control-label" name = "alta_temprana">Alta Temprana</label>
             <div class="col-sm-1">
                        <select class="form-control">
                           <option>Si</option>
@@ -65,7 +65,7 @@
             </div>
    </div>
  <div class="form-group">
-            <label for="campo_lfam" class="col-sm-4 control-label">Libreta de Familia</label>
+            <label for="campo_lfam" class="col-sm-4 control-label" name = "libreta_de_familia">Libreta de Familia</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
@@ -79,7 +79,7 @@
             </div>
     </div>
  <div class="form-group">
-            <label for="campo_pnach" class="col-sm-4 control-label">Partida Nac. Hijos</label>
+            <label for="campo_pnach" class="col-sm-4 control-label" name = "partida_nac_hijos">Partida Nac. Hijos</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
