--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -32,7 +32,7 @@
             </div>
     </div>
     <div class="form-group">
-            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Hijos</label>
+            <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_hijos" >Constancia CUIL Hijos</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
@@ -46,7 +46,7 @@
             </div>
     </div>
     <div class="form-group">
-            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Cónyuge</label>
+            <label for="campo_ccuilh" class="col-sm-4 control-label" name = "constancia_cuil_cony">Constancia CUIL Cónyuge</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
@@ -60,7 +60,7 @@
             </div>
     </div>
     <div class="form-group">
-            <label for="campo_caregh" class="col-sm-4 control-label">Constancia Alumno Regular Hijo</label>
+            <label for="campo_caregh" class="col-sm-4 control-label" name = "constancia_alum_reg_hijo">Constancia Alumno Regular Hijo</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
@@ -74,7 +74,7 @@
             </div>
     </div>
     <div class="form-group">
-            <label for="campo_careg" class="col-sm-4 control-label">Constancia Alumno Regular Empleado</label>
+            <label for="campo_careg" class="col-sm-4 control-label" name = "constancia_alum_reg_empl">Constancia Alumno Regular Empleado</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
@@ -88,7 +88,7 @@
             </div>
     </div>
 <div class="form-group">
-            <label for="campo_cve" class="col-sm-4 control-label">Currículum Empleado</label>
+            <label for="campo_cve" class="col-sm-4 control-label" name = "curriculum_empleado">Currículum Empleado</label>
             <div class="col-sm-3">
                        <select class="form-control">
                           <option>Corresponde</option>
