--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -31,14 +31,18 @@
                </select>
             </div>
           </div>
-
 <div class="form-group">
-            <label for="campo_nya" class="col-sm-2 control-label">Nombres y Apellidos</label>
+            <label for="campo_nombre" class="col-sm-2 control-label">Nombres</label>
             <div class="col-sm-8">
-                <input type="integer" class="form-control" name = "nya" id="campo_nya" placeholder="Francisco Angel Perez Ghik">
+                <input type="integer" class="form-control" name = "nombre" id="campo_nombre" placeholder="Francisco Angel">
             </div>
           </div>
-
+<div class="form-group">
+            <label for="campo_apellido" class="col-sm-2 control-label">Apellidos</label>
+            <div class="col-sm-8">
+                <input type="integer" class="form-control" name = "apellido" id="campo_apellido" placeholder="Perez Wirtz">
+            </div>
+          </div>
  <div class="form-group">
             <label for="campo_fenac1" class="col-sm-2 control-label">Fecha Nacimiento</label>
             <div class="col-sm-3">
