--- a/views/sueldos/reportes_horas.html
+++ b/views/sueldos/reportes_horas.html
@@ -1,14 +1,13 @@
 {{extend 'layout.html'}}
 <h1>Reporte Horas</h1>
 <table class="table"> 
-    <caption>Mes Trabajado : db.mes_trabajado
-    </caption>
+    <caption>{{=titulo}}</caption>
     <thead> 
         <tr> <th>#</th> <th>Nro Legajo</th> <th>Apellido y Nombre</th> <th>Horas Trabajadas</th> </tr> 
     </thead> 
         <tbody>
-            {{for i, reg_empleado in enumerate(informe_horas):}}
-            <tr> <th scope="row">{{=i}}</th> <td>{{=reg_empleado.num_legajo}}</td> <td>{{=reg_empleado.nombre}} {{=reg_empleado.apellido}}</td> <td>{{=reg_horas.hs_trab}}</td> </tr>
+            {{for i, reg_empleado in enumerate(lista_horas):}}
+            <tr> <th scope="row">{{=i}}</th> <td>{{=reg_empleado.horas.num_legajo}}</td> <td>{{=reg_empleado.legajos.nombre}} {{=reg_empleado.legajos.apellido}}</td> <td>{{=reg_empleado.horas.hs_trab}}</td> </tr>
         </tr> 
            {{pass}}  
        </tbody> 
