--- a/views/sueldos/reportes_horas2.html
+++ b/views/sueldos/reportes_horas2.html
@@ -11,7 +11,7 @@
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-2 control-label">Mes</label>
     <div class="col-sm-10">
-      <select class="form-control">
+      <select class="form-control" name="mes">
                           <option>Enero</option>
                           <option>Febrero</option>
                           <option>Marzo</option>
