--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -70,12 +70,22 @@
     </div>
 
 <div class="form-group">
-            <label for="campo_domicilio" class="col-sm-2 control-label">Domicilio</label>
-            <div class="col-sm-8">
-                <input type="integer" class="form-control" name = "domicilio" id="domicilio" placeholder="Av Rivas 2233">
+            <label for="campo_estciv" class="col-sm-2 control-label">Domicilio calle</label>
+            <div class="col-sm-2">
+                <input type="text" class="form-control" name = "domicilio" id="dom" placeholder="Puerto Argentino">
             </div>
-          </div>
-
+            <label for="campo_edad" class="col-sm-2 control-label"> Domicilio numero</label>
+            <div class="col-sm-2">
+                <input type="integer" class="form-control" name = "dom_numero" id="numero" placeholder="30008">
+            </div>
+    <label for="campo_cat" class="col-sm-1 control-label">piso</label>
+            <div class="col-sm-1">
+                <input type="integer" class="form-control" name = "categoria" id="campo_cat" placeholder="12">
+            </div>
+    <label for="campo_cat" class="col-sm-1 control-label">depto</label>
+            <div class="col-sm-1">
+                <input type="string" class="form-control" name = "depto" id="dto" placeholder="1-b">
+    </div>
 </table>
       <button type="submit" class="btn btn-default">Siguiente</button>
 </form>
