--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -105,4 +105,11 @@
 </table>
 <form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos2")}}" enctype="multipart/form-data" method="POST">
       <button type="submit" class="btn btn-default">volver</button>
-</form>
+<form/>
+            </div>
+    </div>
+    <center>
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
+    <button class="btn btn-default" type="submit">Guardar</button>
+    </center>
+<form/>
