correciones de algunos campos

--- a/views/sueldos/familiar.html
+++ b/views/sueldos/familiar.html
@@ -22,11 +22,11 @@
               <div class="form-group">
             <label for="campo_cuil" class="col-sm-2 control-label">Cuil</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" id="campo_cuil" placeholder="20235554442">
+                <input type="string" class="form-control" id="campo_cuil" placeholder="20235554442">
             </div>
             <label for="campo_dni" class="col-sm-2 control-label">Dni</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" id="campo_dni" placeholder="23555444">
+                <input type="string" class="form-control" id="campo_dni" placeholder="23555444">
             </div>
            <label for="campo_cextra" class="col-sm-2 control-label">Parentezco</label>
             <div class="col-sm-2">
