--- a/views/sueldos/familiar2.html
+++ b/views/sueldos/familiar2.html
@@ -48,11 +48,11 @@
     <div class="form-group">
             <label for="campo_fenac1" class="col-sm-2 control-label">Telefono</label>
             <div class="col-sm-3">
-                <input type="integer" class="form-control" id="campo_fenac1" placeholder="Area-434343">
+                <input type="string" class="form-control" id="campo_fenac1" placeholder="Area-434343">
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Celular </label>
             <div class="col-sm-3">
-                <input type="integer" class="form-control" id="campo_lugnac" placeholder="1132555555">
+                <input type="string" class="form-control" id="campo_lugnac" placeholder="1132555555">
             </div>
           </div>
     
