--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -17,11 +17,11 @@
               <div class="form-group">
             <label for="campo_cuil" class="col-sm-2 control-label">CUIL</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" name = "cuil" id="campo_cuil" placeholder="20235554442">
+                <input type="string" class="form-control" name = "cuil" id="campo_cuil" placeholder="20235554442">
             </div>
             <label for="campo_dni" class="col-sm-2 control-label">DNI</label>
             <div class="col-sm-2">
-                <input type="integer" class="form-control" name = "dni" id="campo_dni" placeholder="23555444">
+                <input type="string" class="form-control" name = "dni" id="campo_dni" placeholder="23555444">
             </div>
            <label for="campo_cextra" class="col-sm-2 control-label">Corresponde Hs Extras</label>
             <div class="col-sm-2">
