--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -33,14 +33,12 @@
           </div>
 <div class="form-group">
             <label for="campo_nombre" class="col-sm-2 control-label">Nombres</label>
-            <div class="col-sm-8">
-                <input type="integer" class="form-control" name = "nombre" id="campo_nombre" placeholder="Francisco Angel">
+            <div class="col-sm-4">
+                <input type="text" class="form-control" name = "nombre" id="campo_nombre" placeholder="Francisco Angel">
             </div>
-          </div>
-<div class="form-group">
-            <label for="campo_apellido" class="col-sm-2 control-label">Apellidos</label>
-            <div class="col-sm-8">
-                <input type="integer" class="form-control" name = "apellido" id="campo_apellido" placeholder="Perez Wirtz">
+            <label for="campo_nombre" class="col-sm-2 control-label">Apellidos</label>
+            <div class="col-sm-4">
+                <input type="text" class="form-control" name = "nombre" id="campo_nombre" placeholder="Francisco Angel">
             </div>
           </div>
  <div class="form-group">
