se suben cambiios

--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -5,7 +5,7 @@ enctype= "multipart/form-data">
     <div class="form-group">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">imagen</label>
             <div class="col-sm-4">
-                <input type="file" class="form-control" name = "imagen" id="campo_imagen" placeholder="">
+                <input type="file" class="form-control" name = "imagen" id="filename" placeholder="">
             </div>
     </div>
 </form>
@@ -94,5 +94,5 @@ enctype= "multipart/form-data">
                 <input type="string" class="form-control" name = "depto" id="dto" placeholder="1-b">
     </div>
 </table>
-      <button type="submit" class="btn btn-default">Siguiente</button>
+      <input type="submit" class="btn btn-default" name="buton_siguiente" value="Siguiente">
 </form>
