--- a/views/sueldos/legajos3.html
+++ b/views/sueldos/legajos3.html
@@ -2,7 +2,7 @@
 
 <h1>Registrar Legajo</h1>
 
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos2")}}" enctype="multipart/form-data" method="POST">
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
 <div class="form-group">
             <label for="campo_fdnih" class="col-sm-4 control-label">Fotoc. DNI Hijos</label>
             <div class="col-sm-3">
