se sube segunda y tercera parte del formulario#206

--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -82,15 +82,16 @@
             </div>
             <label for="campo_edad" class="col-sm-2 control-label"> Domicilio numero</label>
             <div class="col-sm-2">
-               {{=form.custom.widget.domicilio_numero}}
+                {{=form.custom.widget.numero_calle}}
             </div>
     <label for="campo_cat" class="col-sm-1 control-label">piso</label>
             <div class="col-sm-1">
-               {{=form.custom.widget.piso}}
-</div>
+                {{=form.custom.widget.piso}}
+            </div>
     <label for="campo_cat" class="col-sm-1 control-label">depto</label>
             <div class="col-sm-1">
-                 {{=form.custom.widget.depto}}
+                {{=form.custom.widget.depto}}
+    </div>
     </div>
       {{=form.custom.submit}}
 </div>
