--- a/views/sueldos/legajos2.html
+++ b/views/sueldos/legajos2.html
@@ -1,119 +1,94 @@
 {{extend 'layout.html'}}
 <h1>Registrar Legajo</h1>
 
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos3")}}" enctype="multipart/form-data" method="POST">
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
+{{=form.custom.begin}}
 
-    <div class="form-group">
+    <div class="form-group row">
             <label for="campo_nombre" class="col-sm-2 control-label">Obra Social</label>
             <div class="col-sm-4">
-                <input type="text" class="form-control" name = "obra social" id="obra_social" placeholder="UTA">
+                {{=form.custom.widget.obra_social}}
             </div>
             <label for="campo_nombre" class="col-sm-2 control-label">Codigo Postal</label>
             <div class="col-sm-4">
-                <input type="integer" class="form-control" name = "codigo postal" id="c_postal" placeholder="1234">
+                {{=form.custom.widget.codigo_postal}}
             </div>
-          </div>
+    </div>
     
-<div class="form-group">
+<div class="form-group row">
             <label for="campo_localidad" class="col-sm-2 control-label">Localidad</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" name = "localidad" id="campo_localidad" placeholder="Morón">
+               {{=form.custom.widget.localidad}}
             </div>
             <label for="campo_email" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" name = "email" id="campo_email" placeholder="perez@pascal.com.ar">
+                {{=form.custom.widget.email}}
             </div>
             <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" name = "fecha_ingreso" id="campo_feing" placeholder="15/01/2016">
+                {{=form.custom.widget.fecha_ingreso}}
             </div>
-    </div>
-<div class="form-group">
+</div>
+<div class="form-group row">
             <label for="campo_tel" class="col-sm-2 control-label">Teléfono</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" name = "telefono" id="campo_tel" placeholder="56567878">
+                {{=form.custom.widget.telefono}}
             </div>
             <label for="campo_telcel" class="col-sm-2 control-label">Teléfono Celular</label>
             <div class="col-sm-2">
-                <input type="text" class="form-control" name = "telefono_celular" id="campo_telcel" placeholder="1523239090">
+              {{=form.custom.widget.telefono_celular}}
             </div>
             <label for="campo_est" class="col-sm-2 control-label" name = "estudia">Estudia</label>
             <div class="col-sm-2">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
+                       {{=form.custom.widget.estudia}}
             </div>
-   </div>
-<div class="form-group">
+</div>
+<div class="form-group row">
             <label for="campo_ccuil" class="col-sm-2 control-label" name = "constancia_cuil">Constancia de CUIL</label>
             <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
+                        {{=form.custom.widget.constancia_de_cuil}}
             </div>
             <label for="campo_cdni" class="col-sm-2 control-label" name = "fotocopia_dni">Fotocopia DNI</label>
             <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
+                       {{=form.custom.widget.foto_dni}}
             </div>
             <label for="campo_atemp" class="col-sm-2 control-label" name = "alta_temprana">Alta Temprana</label>
             <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
+                        {{=form.custom.widget.alt_temp}}
             </div>
-   </div>
- <div class="form-group">
+</div>
+ <div class="form-group row">
             <label for="campo_lfam" class="col-sm-4 control-label" name = "libreta_de_familia">Libreta de Familia</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                       {{=form.custom.widget.libreta}}
             </div>
               <div class="col-sm-2">
               <label>
                 <input type="checkbox"> Presentado
               </label>
             </div>
-    </div>
- <div class="form-group">
+</div>
+ <div class="form-group row">
             <label for="campo_pnach" class="col-sm-4 control-label" name = "partida_nac_hijos">Partida Nac. Hijos</label>
             <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
+                       {{=form.custom.widget.partida}}
             </div>
               <div class="col-sm-2">
               <label>
                 <input type="checkbox"> Presentado
               </label>
             </div>
-</div>
-<div class="form-group">
-     <div class="col-sm-offset-1 col-sm-11">
-</table>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos3")}}" enctype="multipart/form-data" method="POST">
-      <button type="submit" class="btn btn-default">siguiente</button>
-
-      
-     </div>
-</div>
-
-</form>
+ </div>
+<div class="form-group row">
+    <div class=" col-sm-offset-1  col-sm-2">
     
- <div class="form-group">
-     <div class="col-sm-offset-1 col-sm-11">
-</table>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
-      <button type="submit" class="btn btn-default">Volver</button>
-       
-  </div>
+        <a href="{{=URL(c="sueldos", f="legajos")}}" class="btn btn-default">Volver</a>
+    
+    </div>
+     <div class="col-sm-2">
+
+      <button type="submit" class="btn btn-default">siguiente</button>
+     </div>
+    
 </div>
+
+{{=form.custom.end}}
