--- a/views/ordencobro/reporte_cobros.html
+++ b/views/ordencobro/reporte_cobros.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 <h1>Reporte de cobros </h1>
 <table class="table table-hover table-bordered" >
-   <tr style="background-color:black;color:white;">
+   <tr style="background-color:gray;color:white;">
        <td>#</td>
        <td>Fecha</td>
        <td>Cuenta</td>
